web-application/dsl-bots/core/dsl/dsl_source_files/dslParser.py
# Generated from dsl.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class dslParser ( Parser ):

    grammarFileName = "dsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "<INVALID>", "<INVALID>", 
                     "'lat'", "'True'", "'False'", "'id'", "'tweet'", "'in_reply_to_status_id'", 
                     "'status'", "'possibly_sensitive'", "'long'", "'tweet_with_image'", 
                     "'image_name'", "'place_id'", "'display_coordinates'", 
                     "'reply_to_tweet'", "'retweet'", "'direct_message'", 
                     "'favourite'", "'schedule'", "'date'", "'time'", "'text'", 
                     "','", "';'", "':'", "'keyword'", "'follow_all_followers'", 
                     "'automate_time_minutes'", "'minute'", "'hour'", "'month'", 
                     "'response'", "'automate_reply_to_mentions'", "<INVALID>", 
                     "'day_of_month'", "'automate_favourites_retweets'", 
                     "'recipient_id'", "'0'", "'1'", "'2'", "'3'", "'4'", 
                     "'5'", "'6'", "'7'", "'8'", "'9'", "'00'", "'01'", 
                     "'02'", "'03'", "'04'", "'05'", "'06'", "'07'", "'08'", 
                     "'09'", "'10'", "'11'", "'12'", "'13'", "'14'", "'15'", 
                     "'16'", "'17'", "'18'", "'19'", "'20'", "'21'", "'22'", 
                     "'23'", "'24'", "'25'", "'26'", "'27'", "'28'", "'29'", 
                     "'30'", "'31'", "'32'", "'33'", "'34'", "'35'", "'36'", 
                     "'37'", "'38'", "'39'", "'40'", "'41'", "'42'", "'43'", 
                     "'44'", "'45'", "'46'", "'47'", "'48'", "'49'", "'50'", 
                     "'51'", "'52'", "'53'", "'54'", "'55'", "'56'", "'57'", 
                     "'58'", "'59'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "StringLiteral", 
                      "UnterminatedStringLiteral", "LAT", "TRUE", "FALSE", 
                      "ID", "TWEET", "REPLY_ID", "STATUS", "POSSIBLY_SENSITIVE", 
                      "LONG", "TWEET_IMAGE", "IMAGE_NAME", "PLACE_ID", "DISPLAY_COORDINATES", 
                      "REPLY", "RETWEET", "DIRECT_MESSAGE", "FAVOURITE", 
                      "SCHEDULE", "DATE", "TIME", "TEXT", "COMMA", "SEMICOLON", 
                      "COLON", "KEYWORD", "FOLLOWALL", "AUTOMATE_TIME", 
                      "MINUTE", "HOUR", "MONTH", "RESPONSE", "AUTOMATE_REPLY_MENTIONS", 
                      "WS", "DAY_OF_MONTH", "AUTO_FAV_RETWEET", "RECIPIENT_ID", 
                      "INT_0", "INT_1", "INT_2", "INT_3", "INT_4", "INT_5", 
                      "INT_6", "INT_7", "INT_8", "INT_9", "INT_00", "INT_01", 
                      "INT_02", "INT_03", "INT_04", "INT_05", "INT_06", 
                      "INT_07", "INT_08", "INT_09", "INT_10", "INT_11", 
                      "INT_12", "INT_13", "INT_14", "INT_15", "INT_16", 
                      "INT_17", "INT_18", "INT_19", "INT_20", "INT_21", 
                      "INT_22", "INT_23", "INT_24", "INT_25", "INT_26", 
                      "INT_27", "INT_28", "INT_29", "INT_30", "INT_31", 
                      "INT_32", "INT_33", "INT_34", "INT_35", "INT_36", 
                      "INT_37", "INT_38", "INT_39", "INT_40", "INT_41", 
                      "INT_42", "INT_43", "INT_44", "INT_45", "INT_46", 
                      "INT_47", "INT_48", "INT_49", "INT_50", "INT_51", 
                      "INT_52", "INT_53", "INT_54", "INT_55", "INT_56", 
                      "INT_57", "INT_58", "INT_59", "UNSIGNED_INT", "UNSIGNED_FLOAT" ]

    RULE_twitbot = 0
    RULE_stat = 1
    RULE_action = 2
    RULE_tweet = 3
    RULE_tweet_required_parameter = 4
    RULE_tweet_optional_parameters = 5
    RULE_tweetImage = 6
    RULE_tweet_image_required_parameter = 7
    RULE_reply = 8
    RULE_reply_required_parameters = 9
    RULE_retweet = 10
    RULE_retweet_required_parameter = 11
    RULE_favourite = 12
    RULE_favourite_required_parameter = 13
    RULE_scheduleTweet = 14
    RULE_schedule_tweet_required_parameter = 15
    RULE_date_time_parameter = 16
    RULE_minute = 17
    RULE_hour = 18
    RULE_day_of_month = 19
    RULE_month = 20
    RULE_numeric_month = 21
    RULE_numeric_day = 22
    RULE_numeric_hour = 23
    RULE_numeric_minute = 24
    RULE_directMessage = 25
    RULE_direct_message_required_parameters = 26
    RULE_autoFavouriteRetweet = 27
    RULE_autoFollowFollowers = 28
    RULE_autoReplyMentions = 29
    RULE_automateReplyParameter = 30
    RULE_keyword = 31
    RULE_stringValue = 32
    RULE_number = 33
    RULE_unary_operator = 34
    RULE_unsigned_number = 35
    RULE_boolean = 36

    ruleNames =  [ "twitbot", "stat", "action", "tweet", "tweet_required_parameter", 
                   "tweet_optional_parameters", "tweetImage", "tweet_image_required_parameter", 
                   "reply", "reply_required_parameters", "retweet", "retweet_required_parameter", 
                   "favourite", "favourite_required_parameter", "scheduleTweet", 
                   "schedule_tweet_required_parameter", "date_time_parameter", 
                   "minute", "hour", "day_of_month", "month", "numeric_month", 
                   "numeric_day", "numeric_hour", "numeric_minute", "directMessage", 
                   "direct_message_required_parameters", "autoFavouriteRetweet", 
                   "autoFollowFollowers", "autoReplyMentions", "automateReplyParameter", 
                   "keyword", "stringValue", "number", "unary_operator", 
                   "unsigned_number", "boolean" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    StringLiteral=3
    UnterminatedStringLiteral=4
    LAT=5
    TRUE=6
    FALSE=7
    ID=8
    TWEET=9
    REPLY_ID=10
    STATUS=11
    POSSIBLY_SENSITIVE=12
    LONG=13
    TWEET_IMAGE=14
    IMAGE_NAME=15
    PLACE_ID=16
    DISPLAY_COORDINATES=17
    REPLY=18
    RETWEET=19
    DIRECT_MESSAGE=20
    FAVOURITE=21
    SCHEDULE=22
    DATE=23
    TIME=24
    TEXT=25
    COMMA=26
    SEMICOLON=27
    COLON=28
    KEYWORD=29
    FOLLOWALL=30
    AUTOMATE_TIME=31
    MINUTE=32
    HOUR=33
    MONTH=34
    RESPONSE=35
    AUTOMATE_REPLY_MENTIONS=36
    WS=37
    DAY_OF_MONTH=38
    AUTO_FAV_RETWEET=39
    RECIPIENT_ID=40
    INT_0=41
    INT_1=42
    INT_2=43
    INT_3=44
    INT_4=45
    INT_5=46
    INT_6=47
    INT_7=48
    INT_8=49
    INT_9=50
    INT_00=51
    INT_01=52
    INT_02=53
    INT_03=54
    INT_04=55
    INT_05=56
    INT_06=57
    INT_07=58
    INT_08=59
    INT_09=60
    INT_10=61
    INT_11=62
    INT_12=63
    INT_13=64
    INT_14=65
    INT_15=66
    INT_16=67
    INT_17=68
    INT_18=69
    INT_19=70
    INT_20=71
    INT_21=72
    INT_22=73
    INT_23=74
    INT_24=75
    INT_25=76
    INT_26=77
    INT_27=78
    INT_28=79
    INT_29=80
    INT_30=81
    INT_31=82
    INT_32=83
    INT_33=84
    INT_34=85
    INT_35=86
    INT_36=87
    INT_37=88
    INT_38=89
    INT_39=90
    INT_40=91
    INT_41=92
    INT_42=93
    INT_43=94
    INT_44=95
    INT_45=96
    INT_46=97
    INT_47=98
    INT_48=99
    INT_49=100
    INT_50=101
    INT_51=102
    INT_52=103
    INT_53=104
    INT_54=105
    INT_55=106
    INT_56=107
    INT_57=108
    INT_58=109
    INT_59=110
    UNSIGNED_INT=111
    UNSIGNED_FLOAT=112

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TwitbotContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.StatContext)
            else:
                return self.getTypedRuleContext(dslParser.StatContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(dslParser.SEMICOLON)
            else:
                return self.getToken(dslParser.SEMICOLON, i)

        def getRuleIndex(self):
            return dslParser.RULE_twitbot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTwitbot" ):
                listener.enterTwitbot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTwitbot" ):
                listener.exitTwitbot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTwitbot" ):
                return visitor.visitTwitbot(self)
            else:
                return visitor.visitChildren(self)




    def twitbot(self):

        localctx = dslParser.TwitbotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_twitbot)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.stat()
            self.state = 75
            self.match(dslParser.SEMICOLON)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << dslParser.TWEET) | (1 << dslParser.TWEET_IMAGE) | (1 << dslParser.REPLY) | (1 << dslParser.RETWEET) | (1 << dslParser.DIRECT_MESSAGE) | (1 << dslParser.FAVOURITE) | (1 << dslParser.SCHEDULE) | (1 << dslParser.FOLLOWALL) | (1 << dslParser.AUTOMATE_REPLY_MENTIONS) | (1 << dslParser.AUTO_FAV_RETWEET))) != 0):
                self.state = 76
                self.stat()
                self.state = 77
                self.match(dslParser.SEMICOLON)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self):
            return self.getTypedRuleContext(dslParser.ActionContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = dslParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.action()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tweet(self):
            return self.getTypedRuleContext(dslParser.TweetContext,0)


        def tweetImage(self):
            return self.getTypedRuleContext(dslParser.TweetImageContext,0)


        def reply(self):
            return self.getTypedRuleContext(dslParser.ReplyContext,0)


        def retweet(self):
            return self.getTypedRuleContext(dslParser.RetweetContext,0)


        def favourite(self):
            return self.getTypedRuleContext(dslParser.FavouriteContext,0)


        def scheduleTweet(self):
            return self.getTypedRuleContext(dslParser.ScheduleTweetContext,0)


        def directMessage(self):
            return self.getTypedRuleContext(dslParser.DirectMessageContext,0)


        def autoFavouriteRetweet(self):
            return self.getTypedRuleContext(dslParser.AutoFavouriteRetweetContext,0)


        def autoFollowFollowers(self):
            return self.getTypedRuleContext(dslParser.AutoFollowFollowersContext,0)


        def autoReplyMentions(self):
            return self.getTypedRuleContext(dslParser.AutoReplyMentionsContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = dslParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_action)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dslParser.TWEET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.tweet()
                pass
            elif token in [dslParser.TWEET_IMAGE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.tweetImage()
                pass
            elif token in [dslParser.REPLY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.reply()
                pass
            elif token in [dslParser.RETWEET]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.retweet()
                pass
            elif token in [dslParser.FAVOURITE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.favourite()
                pass
            elif token in [dslParser.SCHEDULE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.scheduleTweet()
                pass
            elif token in [dslParser.DIRECT_MESSAGE]:
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.directMessage()
                pass
            elif token in [dslParser.AUTO_FAV_RETWEET]:
                self.enterOuterAlt(localctx, 8)
                self.state = 93
                self.autoFavouriteRetweet()
                pass
            elif token in [dslParser.FOLLOWALL]:
                self.enterOuterAlt(localctx, 9)
                self.state = 94
                self.autoFollowFollowers()
                pass
            elif token in [dslParser.AUTOMATE_REPLY_MENTIONS]:
                self.enterOuterAlt(localctx, 10)
                self.state = 95
                self.autoReplyMentions()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TweetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TWEET(self):
            return self.getToken(dslParser.TWEET, 0)

        def tweet_required_parameter(self):
            return self.getTypedRuleContext(dslParser.Tweet_required_parameterContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(dslParser.COMMA)
            else:
                return self.getToken(dslParser.COMMA, i)

        def tweet_optional_parameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.Tweet_optional_parametersContext)
            else:
                return self.getTypedRuleContext(dslParser.Tweet_optional_parametersContext,i)


        def getRuleIndex(self):
            return dslParser.RULE_tweet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTweet" ):
                listener.enterTweet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTweet" ):
                listener.exitTweet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTweet" ):
                return visitor.visitTweet(self)
            else:
                return visitor.visitChildren(self)




    def tweet(self):

        localctx = dslParser.TweetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tweet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(dslParser.TWEET)
            self.state = 99
            self.tweet_required_parameter()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dslParser.COMMA:
                self.state = 100
                self.match(dslParser.COMMA)
                self.state = 101
                self.tweet_optional_parameters()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tweet_required_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATUS(self):
            return self.getToken(dslParser.STATUS, 0)

        def COLON(self):
            return self.getToken(dslParser.COLON, 0)

        def stringValue(self):
            return self.getTypedRuleContext(dslParser.StringValueContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_tweet_required_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTweet_required_parameter" ):
                listener.enterTweet_required_parameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTweet_required_parameter" ):
                listener.exitTweet_required_parameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTweet_required_parameter" ):
                return visitor.visitTweet_required_parameter(self)
            else:
                return visitor.visitChildren(self)




    def tweet_required_parameter(self):

        localctx = dslParser.Tweet_required_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tweet_required_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(dslParser.STATUS)
            self.state = 108
            self.match(dslParser.COLON)
            self.state = 109
            self.stringValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tweet_optional_parametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSSIBLY_SENSITIVE(self):
            return self.getToken(dslParser.POSSIBLY_SENSITIVE, 0)

        def COLON(self):
            return self.getToken(dslParser.COLON, 0)

        def boolean(self):
            return self.getTypedRuleContext(dslParser.BooleanContext,0)


        def LAT(self):
            return self.getToken(dslParser.LAT, 0)

        def number(self):
            return self.getTypedRuleContext(dslParser.NumberContext,0)


        def LONG(self):
            return self.getToken(dslParser.LONG, 0)

        def PLACE_ID(self):
            return self.getToken(dslParser.PLACE_ID, 0)

        def stringValue(self):
            return self.getTypedRuleContext(dslParser.StringValueContext,0)


        def DISPLAY_COORDINATES(self):
            return self.getToken(dslParser.DISPLAY_COORDINATES, 0)

        def getRuleIndex(self):
            return dslParser.RULE_tweet_optional_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTweet_optional_parameters" ):
                listener.enterTweet_optional_parameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTweet_optional_parameters" ):
                listener.exitTweet_optional_parameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTweet_optional_parameters" ):
                return visitor.visitTweet_optional_parameters(self)
            else:
                return visitor.visitChildren(self)




    def tweet_optional_parameters(self):

        localctx = dslParser.Tweet_optional_parametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tweet_optional_parameters)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dslParser.POSSIBLY_SENSITIVE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(dslParser.POSSIBLY_SENSITIVE)
                self.state = 112
                self.match(dslParser.COLON)
                self.state = 113
                self.boolean()
                pass
            elif token in [dslParser.LAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(dslParser.LAT)
                self.state = 115
                self.match(dslParser.COLON)
                self.state = 116
                self.number()
                pass
            elif token in [dslParser.LONG]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(dslParser.LONG)
                self.state = 118
                self.match(dslParser.COLON)
                self.state = 119
                self.number()
                pass
            elif token in [dslParser.PLACE_ID]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(dslParser.PLACE_ID)
                self.state = 121
                self.match(dslParser.COLON)
                self.state = 122
                self.stringValue()
                pass
            elif token in [dslParser.DISPLAY_COORDINATES]:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.match(dslParser.DISPLAY_COORDINATES)
                self.state = 124
                self.match(dslParser.COLON)
                self.state = 125
                self.boolean()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TweetImageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TWEET_IMAGE(self):
            return self.getToken(dslParser.TWEET_IMAGE, 0)

        def tweet_required_parameter(self):
            return self.getTypedRuleContext(dslParser.Tweet_required_parameterContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(dslParser.COMMA)
            else:
                return self.getToken(dslParser.COMMA, i)

        def tweet_image_required_parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.Tweet_image_required_parameterContext)
            else:
                return self.getTypedRuleContext(dslParser.Tweet_image_required_parameterContext,i)


        def tweet_optional_parameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.Tweet_optional_parametersContext)
            else:
                return self.getTypedRuleContext(dslParser.Tweet_optional_parametersContext,i)


        def getRuleIndex(self):
            return dslParser.RULE_tweetImage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTweetImage" ):
                listener.enterTweetImage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTweetImage" ):
                listener.exitTweetImage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTweetImage" ):
                return visitor.visitTweetImage(self)
            else:
                return visitor.visitChildren(self)




    def tweetImage(self):

        localctx = dslParser.TweetImageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tweetImage)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(dslParser.TWEET_IMAGE)
            self.state = 129
            self.tweet_required_parameter()
            self.state = 132 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 130
                    self.match(dslParser.COMMA)
                    self.state = 131
                    self.tweet_image_required_parameter()

                else:
                    raise NoViableAltException(self)
                self.state = 134 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dslParser.COMMA:
                self.state = 136
                self.match(dslParser.COMMA)
                self.state = 137
                self.tweet_optional_parameters()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tweet_image_required_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMAGE_NAME(self):
            return self.getToken(dslParser.IMAGE_NAME, 0)

        def COLON(self):
            return self.getToken(dslParser.COLON, 0)

        def stringValue(self):
            return self.getTypedRuleContext(dslParser.StringValueContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_tweet_image_required_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTweet_image_required_parameter" ):
                listener.enterTweet_image_required_parameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTweet_image_required_parameter" ):
                listener.exitTweet_image_required_parameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTweet_image_required_parameter" ):
                return visitor.visitTweet_image_required_parameter(self)
            else:
                return visitor.visitChildren(self)




    def tweet_image_required_parameter(self):

        localctx = dslParser.Tweet_image_required_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tweet_image_required_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(dslParser.IMAGE_NAME)
            self.state = 144
            self.match(dslParser.COLON)
            self.state = 145
            self.stringValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReplyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPLY(self):
            return self.getToken(dslParser.REPLY, 0)

        def reply_required_parameters(self):
            return self.getTypedRuleContext(dslParser.Reply_required_parametersContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(dslParser.COMMA)
            else:
                return self.getToken(dslParser.COMMA, i)

        def tweet_image_required_parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.Tweet_image_required_parameterContext)
            else:
                return self.getTypedRuleContext(dslParser.Tweet_image_required_parameterContext,i)

